manifests/30-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ikfram-svc
spec:
  selector:
    app: ikfram
  ports:
    - protocol: TCP
      name: app
      port: 80
      targetPort: 80
